--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -1,14 +1,4 @@
-
-.carousel-inner {
-    height: 70vh;
-    max-width: 100%;
-
-    
-}
-
-.carousel-inner img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    
+.our
+{
+    color: yellow;
 }
