improved home and about page need to improve home page cards

--- a/src/components/styles/about.css
+++ b/src/components/styles/about.css
@@ -3,3 +3,12 @@
     border-bottom: 4px solid #ffdc0e;
     
   }
+.about-us
+{
+  position: relative;
+  padding-top: 10%;
+}
+.our
+{
+  color: #ffdc0e;
+}
