building generic form using Formik and Yup ---  Pause the project for sometime

--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -2,8 +2,7 @@
   position: relative;
   height: 100%;
   padding-bottom: 80px;
-  background: #4f2f60 url("https://miguelquispe.com/pen//hero.jpg") center top
-    no-repeat;
+  background:#6c757d;
   background-size: cover;
   color: #fff;
   overflow: hidden;
